added benefit section

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 @@include('./html/components/_header.html')
 
 @@include('./html/parts/_hero.html')
+@@include('./html/parts/_benefits.html')
 
 @@include('./html/components/_footer.html')
 @@include('./html/components/_footer-scripts.html')
