--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 
 @@include('./html/parts/_hero.html')
 @@include('./html/parts/_benefits.html')
+@@include('./html/parts/_utility.html')
 
 @@include('./html/components/_footer.html')
 @@include('./html/components/_footer-scripts.html')
