added adaptive for utility and fix pc version

--- a/app/html/parts/_utility.html
+++ b/app/html/parts/_utility.html
@@ -5,7 +5,7 @@
     </h2>
     <div class="utility__slider">
       <div class="utility__wrapper d-flex">
-        <div class="utility__slide shadow">
+        <div class="utility__slide shadow" data-slide-count="1">
           <h3 class="utility__caption">
             Вы познакомились с другом/подругой из Турции
           </h3>
@@ -17,7 +17,7 @@
             выражать свои мысли и получать удовольствие от общения.
           </p>
         </div>
-        <div class="utility__slide shadow">
+        <div class="utility__slide shadow" data-slide-count="2">
           <h3 class="utility__caption">
             У вас родственники в Турции
           </h3>
@@ -30,7 +30,7 @@
             собеседника и говорить о том, что волнует вас.
           </p>
         </div>
-        <div class="utility__slide shadow">
+        <div class="utility__slide shadow" data-slide-count="3">
           <h3 class="utility__caption">
             Вы обучаетесь, и вам нужно знание турецкого
           </h3>
@@ -44,7 +44,7 @@
             “Подтяните” лексику по вашей теме, грамматику или разговорные навыки — в ускоренном темпе с преподавателем.
           </p>
         </div>
-        <div class="utility__slide shadow">
+        <div class="utility__slide shadow" data-slide-count="4">
           <h3 class="utility__caption">
             Вы хотите получить хорошую работу или должность
           </h3>
@@ -57,7 +57,7 @@
             позицию на работе.
           </p>
         </div>
-        <div class="utility__slide shadow">
+        <div class="utility__slide shadow" data-slide-count="5">
           <h3 class="utility__caption">
             У вас родственники в Турции
           </h3>
@@ -70,7 +70,7 @@
             собеседника и говорить о том, что волнует вас.
           </p>
         </div>
-        <div class="utility__slide shadow">
+        <div class="utility__slide shadow" data-slide-count="6">
           <h3 class="utility__caption">
             Вы предпочитаете сразу обучаться эффективно и быстр
           </h3>
@@ -86,7 +86,7 @@
       </div>
       <div class="slider-btns utility__btns">
         <button class="slider-btns__btn shadow" type="button"></button>
-        <button class="utility__btn btn">Записаться на пробный урок</button>
+        <button class="utility__btn btn" type="button">Записаться на пробный урок</button>
         <button class="slider-btns__btn shadow" type="button"></button>
       </div>
     </div>
