--- a/app/html/parts/_utility.html
+++ b/app/html/parts/_utility.html
@@ -1,5 +1,5 @@
 <section class="utility">
-  <div class="container utility__container">
+  <div class="container">
     <h2 class="utility__title title title--line title--center" data-headline="Для кого">
       Когда индивидуальные занятия для вас будут максимально полезны
     </h2>
