added advantages section

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 @@include('./html/parts/_hero.html')
 @@include('./html/parts/_benefits.html')
 @@include('./html/parts/_utility.html')
+@@include('./html/parts/_advantages.html')
 
 @@include('./html/components/_footer.html')
 @@include('./html/components/_footer-scripts.html')
