--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 @@include('./html/parts/_benefits.html')
 @@include('./html/parts/_utility.html')
 @@include('./html/parts/_advantages.html')
+@@include('./html/parts/_skills.html')
 
 @@include('./html/components/_footer.html')
 @@include('./html/components/_footer-scripts.html')
