added conclusion section

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 @@include('./html/parts/_utility.html')
 @@include('./html/parts/_advantages.html')
 @@include('./html/parts/_skills.html')
+@@include('./html/parts/_conclusion.html')
 
 @@include('./html/components/_footer.html')
 @@include('./html/components/_footer-scripts.html')
