added test modal window

--- a/app/html/parts/_advantages.html
+++ b/app/html/parts/_advantages.html
@@ -59,6 +59,6 @@
         </ul>
       </div>
     </div>
-    <button class="advantages__btn btn">Записаться на пробный урок</button>
+    <button class="advantages__btn btn" type="button" data-path="order">Записаться на пробный урок</button>
   </div>
 </section>
