--- a/app/html/parts/_conclusion.html
+++ b/app/html/parts/_conclusion.html
@@ -35,6 +35,6 @@
         </p>
       </li>
     </ul>
-    <button class="conclusion__btn btn">Записаться на пробный урок</button>
+    <button class="conclusion__btn btn" type="button" data-path="order">Записаться на пробный урок</button>
   </div>
 </section>
