--- a/app/html/parts/_skills.html
+++ b/app/html/parts/_skills.html
@@ -13,7 +13,7 @@
             вас проще простого описать, что вы любите и не любите делать. Вы умеете спрашивать и отвечать который час,
             использовать цифры от 1 до 1 000.
           </p>
-          <a class="skills__link" href="#">Узнать больше</a>
+          <button class="skills__btn btn" type="button" data-path="info-a1">Узнать больше</button>
         </div>
         <div class="skills__slide shadow">
           <h3 class="skills__lvl" data-skills-lvl="A2">базовый уровень</h3>
@@ -25,7 +25,7 @@
           <p class="skills__text text">
             Вы говорите и задаете вопросы о планах на будущее, обсуждаете погоду, сравниваете людей, события, города.
           </p>
-          <a class="skills__link" href="#">Узнать больше</a>
+          <button class="skills__btn btn" type="button" data-path="info-a2">Узнать больше</button>
         </div>
         <div class="skills__slide shadow">
           <h3 class="skills__lvl" data-skills-lvl="B2">уровень выше среднего</h3>
@@ -35,7 +35,7 @@
             вопросы, делать выводы, приводить доказательства, делать предположения о будущем, используя фразовые
             глаголы, составные прошедшие и будущие времена, используя широкий словарный запас.
           </p>
-          <a class="skills__link" href="#">Узнать больше</a>
+          <button class="skills__btn btn" type="button" data-path="info-b2">Узнать больше</button>
         </div>
         <div class="skills__slide shadow">
           <h3 class="skills__lvl" data-skills-lvl="C1">продвинутый уровень</h3>
@@ -45,12 +45,12 @@
             художественные фильмы на турецком без особых усилий, читаете статьи в газетах и журналах широкой
             направленности, способны написать письмо, эссе, статью на заданную тему.
           </p>
-          <a class="skills__link" href="#">Узнать больше</a>
+          <button class="skills__btn btn" type="button" data-path="info-c1">Узнать больше</button>
         </div>
       </div>
 
       <div class="slider-btns skills__btns">
-        <button class="slider-btns__btn" type="button"></button>
+        <button class="slider-btns__btn shadow" type="button"></button>
         <p class="skills__info text">
           *Если вы хотите прокачать любой из уровней турецкого и получить сертификат по итогам обучения, тогда вам
           необходимо 32 занятия с преподавателем индивидуально.
