--- a/app/html/parts/_hero.html
+++ b/app/html/parts/_hero.html
@@ -7,7 +7,7 @@
         Хотите быстро прокачать язык для личной жизни, работы, учебы и ПМЖ в Турции? Занимайтесь онлайн с лучшими
         преподавателями и начните говорить на турецком с первых занятий.
       </p>
-      <button class="hero__btn btn" type="button">Записаться на пробный урок</button>
+      <button class="hero__btn btn" type="button" data-path="order">Записаться на пробный урок</button>
     </div>
     <img class="hero__img shadow" src="images/hero-img.png" alt="Ноутбук с надписью на турецком">
   </div>
