--- a/app/html/parts/_utility.html
+++ b/app/html/parts/_utility.html
@@ -86,7 +86,7 @@
       </div>
       <div class="slider-btns utility__btns">
         <button class="slider-btns__btn shadow" type="button"></button>
-        <button class="utility__btn btn" type="button">Записаться на пробный урок</button>
+        <button class="utility__btn btn" type="button" data-path="order">Записаться на пробный урок</button>
         <button class="slider-btns__btn shadow" type="button"></button>
       </div>
     </div>
