added cost section

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 @@include('./html/parts/_advantages.html')
 @@include('./html/parts/_skills.html')
 @@include('./html/parts/_conclusion.html')
+@@include('./html/parts/_cost.html')
 @@include('./html/components/_modals.html')
 
 @@include('./html/components/_footer.html')
