added reviews section

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 @@include('./html/parts/_skills.html')
 @@include('./html/parts/_conclusion.html')
 @@include('./html/parts/_cost.html')
+@@include('./html/parts/_reviews.html')
 @@include('./html/components/_modals.html')
 
 @@include('./html/components/_footer.html')
