added start section

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 @@include('./html/parts/_conclusion.html')
 @@include('./html/parts/_cost.html')
 @@include('./html/parts/_reviews.html')
+@@include('./html/parts/_start.html')
 @@include('./html/components/_modals.html')
 
 @@include('./html/components/_footer.html')
