--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 @@include('./html/parts/_cost.html')
 @@include('./html/parts/_reviews.html')
 @@include('./html/parts/_start.html')
+@@include('./html/parts/_teachers.html')
 @@include('./html/components/_modals.html')
 
 @@include('./html/components/_footer.html')
