--- a/app/html/parts/_advantages.html
+++ b/app/html/parts/_advantages.html
@@ -1,7 +1,7 @@
 <section class="advantages">
   <div class="container">
     <div class="advantages__inner d-flex">
-      <img class="advantages__flag" src="images/flag.png">
+      <img class="advantages__flag" src="images/flag.png" alt="Турецкий флаг">
       <div class="advantages__content">
         <h2 class="advantages__title title title--sm" data-headline="Почему выгодно заниматься с нами">
           Почему выгодно заниматься индивидуально с преподавателем у нас
