--- a/app/html/parts/_benefits.html
+++ b/app/html/parts/_benefits.html
@@ -1,38 +1,40 @@
 <section class="benefits">
   <div class="container">
-    <h2 class="benefits__title title title--big title--line" data-headline="Что входит в курс">Вы получаете</h2>
+    <h2 class="benefits__title title title--big title--line wow rollIn" data-headline="Что входит в курс">
+      Вы получаете
+    </h2>
     <ul class="benefits__list list-reset d-flex">
-      <li class="benefits__item">
+      <li class="benefits__item wow slideInLeft" data-wow-duration="1s">
         <div class="benefits__icon shadow" style="background-image: url('images/benefit-1.svg');"></div>
         <p class="benefits__text">
           <span class="benefits__text-b">Сертификат</span> по итогам обучения
         </p>
       </li>
-      <li class="benefits__item">
+      <li class="benefits__item wow slideInLeft" data-wow-delay="0.5s">
         <div class="benefits__icon shadow" style="background-image: url('images/benefit-2.svg');"></div>
         <p class="benefits__text">
           Выбирайте <span class="benefits__text-b">любое количество</span> уроков с преподавателем
         </p>
       </li>
-      <li class="benefits__item">
+      <li class="benefits__item wow slideInLeft" data-wow-delay="1s">
         <div class="benefits__icon shadow" style="background-image: url('images/benefit-3.svg');"></div>
         <p class="benefits__text">
           <span class="benefits__text-b">Грамматика “без воды”</span>, а только реально нужная информация для вас
         </p>
       </li>
-      <li class="benefits__item">
+      <li class="benefits__item wow slideInRight" data-wow-delay="1s">
         <div class="benefits__icon shadow" style="background-image: url('images/benefit-4.svg');"></div>
         <p class="benefits__text">
           <span class="benefits__text-b">Индивидуальная программа</span> занятий под ваши задачи
         </p>
       </li>
-      <li class="benefits__item">
+      <li class="benefits__item wow slideInRight" data-wow-delay="0.5s">
         <div class="benefits__icon shadow" style="background-image: url('images/benefit-5.svg');"></div>
         <p class="benefits__text">
           <span class="benefits__text-b">Постановка разговорной речи</span> от лучших преподавателей
         </p>
       </li>
-      <li class="benefits__item">
+      <li class="benefits__item wow slideInRight" data-wow-duration="1s">
         <div class="benefits__icon shadow" style="background-image: url('images/benefit-6.svg');"></div>
         <p class="benefits__text">
           <span class="benefits__text-b">Самая актуальная</span> и употребляемая
