--- a/app/html/parts/_cost.html
+++ b/app/html/parts/_cost.html
@@ -1,6 +1,6 @@
 <section class="cost">
   <div class="container">
-    <h2 class="cost__title title title--center" data-headline="Стоимость">Сколько это стоит</h2>
+    <h2 class="cost__title title title--center wow rollIn" data-headline="Стоимость">Сколько это стоит</h2>
     <span class="cost__choose">Кол-во занятий (выберите):</span>
     <div class="cost__btns">
       <button class="cost__btn" data-task-count="7">1 - 7 занятий</button>
@@ -19,6 +19,6 @@
         <span class="cost__price cost__price--all-price">000000</span> руб.
       </span>
     </div>
-    <button class="cost__order btn" data-path="order">Оставить заявку на пробный урок</button>
+    <button class="cost__order btn wow bounceIn" data-path="order">Оставить заявку на пробный урок</button>
   </div>
 </section>
