--- a/app/html/parts/_hero.html
+++ b/app/html/parts/_hero.html
@@ -1,14 +1,14 @@
 <section class="hero">
   <div class="container">
-    <div class="hero__offer">
+    <div class="hero__offer wow slideInLeft">
       <span class="hero__headline">Бесплатный урок!</span>
       <h1 class="hero__title title title--big">Индивидуальный Турецкий онлайн</h1>
       <p class="hero__text text">
         Хотите быстро прокачать язык для личной жизни, работы, учебы и ПМЖ в Турции? Занимайтесь онлайн с лучшими
         преподавателями и начните говорить на турецком с первых занятий.
       </p>
-      <button class="hero__btn btn" type="button" data-path="order">Записаться на пробный урок</button>
+      <button class="hero__btn btn wow bounceIn" type="button" data-path="order">Записаться на пробный урок</button>
     </div>
     <img class="hero__img shadow" src="images/hero-img.png" alt="Ноутбук с надписью на турецком">
   </div>
-</section>
+</section> 
