--- a/app/html/parts/_questionnaire.html
+++ b/app/html/parts/_questionnaire.html
@@ -91,7 +91,7 @@
           </ul>
         </li>
       </ul>
-      <button class="questionnaire__btn btn btn--sm" type="submit">Заполнить анкету</button>
+      <button class="questionnaire__btn btn btn--sm wow bounceIn" type="submit">Заполнить анкету</button>
     </form>
   </div>
 </section>
