--- a/app/html/parts/_reviews.html
+++ b/app/html/parts/_reviews.html
@@ -1,6 +1,6 @@
 <section class="reviews">
   <div class="container">
-    <h2 class="reviews__title title title--center" data-headline="Отзывы">
+    <h2 class="reviews__title title title--center wow rollIn" data-headline="Отзывы">
       Что говорят ученики, которые прошли обучение у нас
     </h2>
     <div class="reviews__slider">
@@ -49,6 +49,6 @@
       <div class="reviews__pagination">
       </div>
     </div>
-    <button class="reviews__btn btn" type="button" data-path="order">Хочу так же</button>
+    <button class="reviews__btn btn wow bounceIn" type="button" data-path="order">Хочу так же</button>
   </div>
 </section>
