--- a/app/html/parts/_start.html
+++ b/app/html/parts/_start.html
@@ -5,19 +5,19 @@
         Как начать заниматься индивидуально с преподавателем школы “Диалог”
       </h2>
       <ul class="start__list list-reset">
-        <li class="start__item">
+        <li class="start__item wow slideInRight">
           Оставьте заявку на сайте.
         </li>
-        <li class="start__item">
+        <li class="start__item wow slideInRight" data-wow-delay="0.3s">
           Мы назначаем пробный бесплатный урок.
         </li>
-        <li class="start__item">
+        <li class="start__item wow slideInRight" data-wow-delay="0.6s">
           По итогам первого пробного занятия подбираем преподавателя под ваши запросы.
         </li>
-        <li class="start__item">
+        <li class="start__item wow slideInRight" data-wow-delay="0.9s">
           Приступите к урокам с преподавателем.
         </li>
-        <li class="start__item">
+        <li class="start__item wow slideInRight" data-wow-delay="1.2s">
           Оцените свой результат уже после первых уроков.
         </li>
       </ul>
