--- a/app/html/parts/_utility.html
+++ b/app/html/parts/_utility.html
@@ -85,9 +85,9 @@
         </div>
       </div>
       <div class="slider-btns utility__btns">
-        <button class="slider-btns__btn shadow" type="button"></button>
-        <button class="utility__btn btn" type="button" data-path="order">Записаться на пробный урок</button>
-        <button class="slider-btns__btn shadow" type="button"></button>
+        <button class="slider-btns__btn shadow wow slideInLeft" type="button"><span class="fz0">Предвидущий слайд</span></button>
+        <button class="utility__btn btn wow fadeInDown" type="button" data-path="order">Записаться на пробный урок</button>
+        <button class="slider-btns__btn shadow wow slideInRight" type="button"><span class="fz0">Cледующий слайд</span></button>
       </div>
     </div>
   </div>
