--- a/app/html/parts/_skills.html
+++ b/app/html/parts/_skills.html
@@ -50,12 +50,12 @@
       </div>
 
       <div class="slider-btns skills__btns">
-        <button class="slider-btns__btn shadow" type="button"></button>
+        <button class="slider-btns__btn shadow wow slideInLeft" type="button"><span class="fz0">Предвидущий слайд</span></button>
         <p class="skills__info text">
           *Если вы хотите прокачать любой из уровней турецкого и получить сертификат по итогам обучения, тогда вам
           необходимо 32 занятия с преподавателем индивидуально.
         </p>
-        <button class="slider-btns__btn shadow" type="button"></button>
+        <button class="slider-btns__btn shadow wow slideInRight" type="button"><span class="fz0">Cледующий слайд</span></button>
       </div>
     </div>
   </div>
