--- a/app/html/parts/_teachers.html
+++ b/app/html/parts/_teachers.html
@@ -1,14 +1,13 @@
 <section class="teachers">
   <div class="container">
-    <h2 class="teachers__title title title--center" data-headline="Преподаватели">
+    <h2 class="teachers__title title title--center wow rollIn" data-headline="Преподаватели">
       Наши преподаватели турецкого языка
     </h2>
-
     <div class="teachers__slider">
       <div class="teachers__wrapper">
         <div class="teachers__slide">
           <div class="teachers__photo" style="background-image: url('images/teacher-1.jpg');"></div>
-          <span class="teachers__name">Анастасия Ханым</span>
+          <span class="teachers__name">Анастасия Валентиновна</span>
           <p class="teachers__text text">
             Merhaba. Меня зовут Анастасия. Я преподаю турецкий язык уже 6 лет, 5 из них в Онлайн школе "Диалог".
           </p>
@@ -20,9 +19,9 @@
         </div>
         <div class="teachers__slide">
           <div class="teachers__photo" style="background-image: url('images/teacher-3.jpg');"></div>
-          <span class="teachers__name">Виктория Хабиб</span>
+          <span class="teachers__name">Руслан Сергеевич</span>
           <p class="teachers__text text">
-            Merhaba. Меня зовут Виктория. Я преподаю турецкий язык уже 6 лет, 5 из них в Онлайн школе "Диалог".
+            Merhaba. Меня зовут Руслан. Я преподаю турецкий язык уже 6 лет, 5 из них в Онлайн школе "Диалог".
           </p>
           <p class="teachers__text text">
             Преподавание для меня это не просто работа, это любимое дело, которому я посвящаю достаточно много времени.
@@ -32,9 +31,9 @@
         </div>
         <div class="teachers__slide">
           <div class="teachers__photo" style="background-image: url('images/teacher-2.jpg');"></div>
-          <span class="teachers__name">Руслан Сергеевич</span>
+          <span class="teachers__name">Анна Сергеевна</span>
           <p class="teachers__text text">
-            Merhaba. Меня зовут Руслан. Я преподаю турецкий язык уже 6 лет, 5 из них в Онлайн школе "Диалог".
+            Merhaba. Меня зовут Анна. Я преподаю турецкий язык уже 6 лет, 5 из них в Онлайн школе "Диалог".
           </p>
           <p class="teachers__text text">
             Преподавание для меня это не просто работа, это любимое дело, которому я посвящаю достаточно много времени.
